development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
.actionHeader.events {
    background-color: #000000;
}

.info-section {
  padding: 0px 0 13px 0;
  height: 20em;
  margin-bottom: 0.5em;
}

.info-box {
  width: 100%;
  color: #003a6e !important;
  height: 33%;
  z-index: 100;
  line-height: 1.5em;
  margin: 0em 0em 0.5em 0em;
  background: #e5e5e5;
  display: table;
  font-weight: 400 !important;
}
.info-box:hover, .info-box-lower:hover {
  color: #00447c;
  border: 1px solid #00447c;
  background-color: #ecf0f1;
  border-bottom: 1px solid #00447c !important;
}

.info-box-lower {
  width: 100%;
  color: #003a6e !important;
  height: 33%;
  z-index: 100;
  line-height: 1.5em;
  margin: 0em 0em 0.5em 0em;
  background: #e5e5e5;
  display: table;
  font-weight: 400 !important;
}
.info-box-lower:hover {
  color: #00447c;
  border: 1px solid #00447c;
  background-color: #ecf0f1;
}

.infocenter {
  display: table-cell;
  vertical-align: middle;
  text-align:center;
}

.action-section {
  padding: 0;
  height: 4em;
  margin-bottom: 0.5em;
}

.action-box {
  width: 100%;
  color: #fff;
  height: 100%;
  z-index: 100;
  line-height: 1.5em;
  margin: 0em 0em 0.5em 0em;
  display: table;
  border-radius: 15px;
}

.admissions-deadlines-container {
  padding: 5px 8px 30px;
  line-height: 1.428571429;
  background-color: #fff;
  border: 1px solid #ddd;
  border-radius: 4px;
  -webkit-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}
.admissions-deadlines {
  font-size: 1.65em;
  margin-bottom: 15px;
  display: block;
  padding: .5em 5px;
  text-align: center;
  line-height: 1em;
  color: #fff;
}

#content .row {
  margin: 0;
}

.admissions-img {
  margin-bottom: 1em;
}

.admissions-promo{
  background-size: cover;
  background-position: center top;
  background: no-repeat center center;
  margin-bottom:1em;
	padding-left: 0px;
	padding-right: 0px;
}

.admissions-promo img.img-responsive {
  width: 100%;
  padding: 0 !important;
}
.hero-caption {
  color: #fff;
  right: 0;
  bottom: 0;
  position: static !important;
  background: #000;
  margin: 0;
  font-size: 16.1px;
  font-weight: 100;
  padding: 2%;
  background: rgba(0, 0, 0, 0.5);
  position: absolute;
  width: 100%;
  bottom: auto !important;
}
.action-btns {
  display: table;
  font-weight: 400 !important;
  margin-bottom: 5px;
  height: 100%;
  border-radius: 12px;
}

.action-btns-container {
  height: 6.25em;
}

.action-btns-text {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}

.hero-caption h2 {
  color: white;
}

.action-btns-last {
  color: white !important;
  background-color: #002b52 !important;
}

.action-btns-last:hover {
  background: #001c36 !important;
  color: #fff !important;
}
.action-btns-last {
  margin-bottom: 7px;
}

@media screen and (min-width: 768px) {
  .action-btns {
    font-size: 2.5vw;
    width: 24.5%;
    margin-right: 0.5%;
  }

  .info-box {
    width: 96%;
  }

  .info-box-lower {
    width: 48.7%;
    margin-right: 0.5rem;
  }

  .tool {
    font-size: 1.2em;
  }

  .action-box {
    width: 96%;
  }
  .action-section {
    padding: 13px 0 13px 0;
    height: 8em;
    margin-bottom: 0.5em;
  }
  .info-section {
    padding: 13px 0 13px 0;
  }
  .action-btns-last {
    margin-bottom: 5px;
  }
}

@media screen and (min-width: 992px) {
  .action-btns {
    font-size: 1.75em;
    margin-bottom: 0px;
  }
  .info-box {
    font-size: 1.5em;
  }
  .info-box-lower {
    font-size: 1.5em;
  }
  .hero-caption {
    width: 40%;
    float: right;
    position: absolute !important;
    top: inherit;
    right: 0;
    left: auto;
    bottom: 0 !important;
  }
}

